archive/longhorn/ingress.yaml
# This YAML defines an Ingress resource for exposing the Longhorn frontend.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  # Name of the Ingress resource.
  name: longhorn-frontend-ingress
  # Namespace where the Ingress resides.
  namespace: longhorn-system
  # Annotation provide additional configuration for the Ingress.
  annotations:
spec:
  # Specifies the class of the Ingress controller handling this Ingress.
  # In this case, it's set to use NGINX Ingress controller.
  ingressClassName: nginx
  # Defines the rules for routing traffic to backend services.
  rules:
  - host: "kn.longhorn.io" # Hostname for accessing the Longhorn frontend.
    http:
      # Specifies the HTTP paths and their associated backends.
      paths:
      - pathType: Prefix
        path: "/" # Prefix path for all requests to be directed to the Longhorn frontend.
        backend:
          service:
            name: longhorn-ui-nodeport # Name of the backend service.
            port:
              number: 8000 # Port number of the backend service.
